tests/resources/sanitizer_data/ubsan_signed_integer_overflow_debug.txt
crashme.cpp:96:7: runtime error: signed integer overflow: 2147483647 + 1 cannot be represented in type 'int'
SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior crashme.cpp:96:7 in 
